--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,33 +1,174 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="table-wrapper">
+    <div class="table-title">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2><b>Alunos</b></h2>
+        </div>
+        <div class="col-sm-6 group-btn-title">
+          <a href="#addStudentModal" class="btn btn-success btn-title" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Criar</span></a>
+        </div>
+      </div>
+    </div>
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Identificação</th>
+          <th>Curso</th>
+          <th>Instituição</th>
+          <th>Nota</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @students.each do |student| %>
+        <tr>
+          <td>
+            <%= student.id %>
+          </td>
+          <td>
+            <%= student.student_id %>
+          </td>
+          <td>
+            <%= student.course_id %>
+          </td>
+          <td>
+            <%= student.institution_id %>
+          </td>
+          <td>
+            <%= student.grade %>
+          </td>
+          <td>
+            <a class="edit" data-toggle="modal" onclick="editStudent(<%= student.id %>,'<%= student.student_id %>', <%= student.course_id %>, <%= student.institution_id %>, <%= student.grade %>)"><i class="material-icons" data-toggle="tooltip" title="Editar" data-original-title="Editar">&#xE254;</i></a>
+            <a class="delete" data-toggle="modal" onclick="deleteStudent(<%= student.id %>)"><i class="material-icons" data-toggle="tooltip" title="Deletar" data-original-title="Deletar">&#xE872;</i></a>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <div class="clearfix">
+      <div class="hint-text">Mostrando <b>5</b> de <b>25</b> resultados</div>
+      <ul class="pagination">
+        <li class="page-item disabled"><a href="#">Anterior</a></li>
+        <li class="page-item"><a href="#" class="page-link">1</a></li>
+        <li class="page-item"><a href="#" class="page-link">2</a></li>
+        <li class="page-item active"><a href="#" class="page-link">3</a></li>
+        <li class="page-item"><a href="#" class="page-link">4</a></li>
+        <li class="page-item"><a href="#" class="page-link">5</a></li>
+        <li class="page-item"><a href="#" class="page-link">Próximo</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 
-<h1>Students</h1>
+<div id="addStudentModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form action="/students" method="post">
+        <div class="modal-header">            
+          <h4 class="modal-title">Adicionar Aluno</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">          
+          <div class="form-group">
+            <label for="addStudentId">Identificação</label>
+            <input id="addStudentId" name="student[student_id]" type="text" class="form-control" required>
+          </div>  
+          <div class="form-group">
+            <label for="addCourseId">Curso</label>
+            <input id="addCourseId" name="student[course_id]" type="text" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="addInstitutionId">Instituição</label>
+            <input id="addInstitutionId" name="student[institution_id]" type="text" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="addGrade">Nota</label>
+            <input id="addGrade" name="student[grade]" type="text" class="form-control" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
+          <input name="commit" type="submit" class="btn btn-success" value="Adicionar">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Student</th>
-      <th>Course</th>
-      <th>Institution</th>
-      <th>Grade</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div id="deleteStudentModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="delete-form" action="" method="post">
+        <div class="modal-header">            
+          <h4 class="modal-title">Deletar Aluno</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">          
+          <p>Você tem certeza que deseja deletar?</p>
+          <p class="text-warning"><small>Essa ação não pode ser desfeita.</small></p>
+        </div>
+        <div class="modal-footer">
+          <input type="hidden" name="_method" value="delete">
+          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
+          <input name="commit" type="submit" class="btn btn-danger" value="Deletar">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
-  <tbody>
-    <% @students.each do |student| %>
-      <tr>
-        <td><%= student.student_id %></td>
-        <td><%= student.course_id %></td>
-        <td><%= student.institution_id %></td>
-        <td><%= student.grade %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div id="editStudentModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="edit-form" action="" method="post">
+        <div class="modal-header">            
+          <h4 class="modal-title">Editar Instituição</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">          
+          <div class="form-group">
+            <label for="editStudentId">Identificação</label>
+            <input id="editStudentId" name="student[student_id]" type="text" class="form-control" required>
+          </div>  
+          <div class="form-group">
+            <label for="editCourseId">Curso</label>
+            <input id="editCourseId" name="student[course_id]" type="text" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="editInstitutionId">Instituição</label>
+            <input id="editInstitutionId" name="student[institution_id]" type="text" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="editGrade">Nota</label>
+            <input id="editGrade" name="student[grade]" type="text" class="form-control" required>
+          </div>
+        </div>        
+        <div class="modal-footer">
+          <input type="hidden" name="_method" value="patch">
+          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
+          <input name="commit" type="submit" class="btn btn-info" value="Salvar">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
-<br>
-
-<%= link_to 'New Student', new_student_path %>
+<script>
+  function deleteStudent(id) {
+    $("#delete-form").attr('action', '/students/' + id );
+    $('#deleteStudentModal').modal('toggle');
+  }
+  function editStudent(id,student_id, course_id, institution_id, grade ) {
+    $("#edit-form").attr('action', '/students/' + id );
+    $("#editStudentId").val( student_id );
+    $("#editCourseId").val( course_id );
+    $("#editInstitutionId").val( institution_id );
+    $("#editGrade").val( grade );
+    $('#editStudentModal').modal('toggle');
+  }
+</script>
