--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,12 +8,35 @@
     </div>
   </div>
 
-  <!-- HEADING -->
   <div class="py-2 drawer-heading">
-    Menu
+    Cadastro
   </div>
 
-  <!-- MENU -->
+  <ul class="drawer-menu" id="mainMenu" data-children=".drawer-submenu">
+    <li class="drawer-menu-item">
+      <a href="/institutions">
+        <i class="material-icons">account_balance</i>
+        <span class="drawer-menu-text">Instituições</span>
+      </a>
+    </li>
+    <li class="drawer-menu-item">
+      <a href="/courses">
+        <i class="material-icons">language</i>
+        <span class="drawer-menu-text">Cursos</span>
+      </a>
+    </li>
+    <li class="drawer-menu-item">
+      <a href="/students">
+        <i class="material-icons">face</i>
+        <span class="drawer-menu-text">Alunos</span>
+      </a>
+    </li>
+  </ul>
+
+  <div class="py-2 drawer-heading">
+    Performance
+  </div>
+
   <ul class="drawer-menu" id="mainMenu" data-children=".drawer-submenu">
     <li class="drawer-menu-item">
       <a href="/institutions">
