--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -15,6 +15,7 @@
         <tr>
           <th>#</th>
           <th>Nome</th>
+          <th>Nota</th>
           <th>Ações</th>
         </tr>
       </thead>
@@ -28,7 +29,10 @@
             <%= institution.title %>
           </td>
           <td>
-            <a class="edit" data-toggle="modal" onclick="editInstitution(<%= institution.id %>,'<%= institution.title %>')"><i class="material-icons" data-toggle="tooltip" title="Editar" data-original-title="Editar">&#xE254;</i></a>
+            <%= institution.grade %>
+          </td>
+          <td>
+            <a class="edit" data-toggle="modal" onclick="editInstitution(<%= institution.id %>,'<%= institution.title %>', <%= institution.grade %>)"><i class="material-icons" data-toggle="tooltip" title="Editar" data-original-title="Editar">&#xE254;</i></a>
             <a class="delete" data-toggle="modal" onclick="deleteInstitution(<%= institution.id %>)"><i class="material-icons" data-toggle="tooltip" title="Deletar" data-original-title="Deletar">&#xE872;</i></a>
           </td>
         </tr>
@@ -62,7 +66,11 @@
           <div class="form-group">
             <label for="addInstitutionTitle">Nome</label>
             <input id="addInstitutionTitle" name="institution[title]" type="text" class="form-control" required>
-          </div>          
+          </div>
+          <div class="form-group">
+            <label for="addInstitutionGrade">Nota</label>
+            <input id="addInstitutionGrade" name="institution[grade]" type="text" class="form-control" required>
+          </div>        
         </div>
         <div class="modal-footer">
           <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
@@ -109,7 +117,11 @@
           <div class="form-group">
             <label for="editInstitutionTitle">Name</label>
             <input id="editInstitutionTitle" name="institution[title]" type="text" class="form-control" required>
-          </div>         
+          </div>
+          <div class="form-group">
+            <label for="editInstitutionGrade">Nota</label>
+            <input id="editInstitutionGrade" name="institution[grade]" type="text" class="form-control" required>
+          </div>  
         </div>
         <div class="modal-footer">
           <input type="hidden" name="_method" value="patch">
@@ -127,9 +139,10 @@
       $("#delete-form").attr('action', '/institutions/' + id );
       $('#deleteInstitutionModal').modal('toggle');
     }
-    function editInstitution(id,title) {
+    function editInstitution(id, title, grade) {
       $("#edit-form").attr('action', '/institutions/' + id );
       $("#editInstitutionTitle").val( title );
+      $("#editInstitutionGrade").val( grade );
       $('#editInstitutionModal').modal('toggle');
     }
   </script>
