--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -10,6 +10,10 @@
         </div>
       </div>
     </div>
+    <div class="form-group input-group">
+        <span class="input-group-addon searchbar-icon"><i class="material-icons">search</i></span>
+        <input name="consulta" id="inputSearch" placeholder="Consultar" type="text" class="form-control">
+    </div>
     <table class="table table-striped table-hover">
       <thead>
         <tr>
@@ -146,16 +150,20 @@
   </div>
 </div>  
 
-  <script>
-    function deleteCourse(id) {
-      $("#delete-form").attr('action', '/courses/' + id );
-      $('#deleteCourseModal').modal('toggle');
-    }
-    function editCourse(id,title, institution_id, grade) {
-      $("#edit-form").attr('action', '/courses/' + id );
-      $("#editCourseTitle").val( title );
-      $("#editCourseInstitutionId").val( institution_id );
-      $("#editCourseGrade").val( grade );
-      $('#editCourseModal').modal('toggle');
-    }
-  </script>
+<script>
+  function deleteCourse(id) {
+    $("#delete-form").attr('action', '/courses/' + id );
+    $('#deleteCourseModal').modal('toggle');
+  }
+  function editCourse(id,title, institution_id, grade) {
+    $("#edit-form").attr('action', '/courses/' + id );
+    $("#editCourseTitle").val( title );
+    $("#editCourseInstitutionId").val( institution_id );
+    $("#editCourseGrade").val( grade );
+    $('#editCourseModal').modal('toggle');
+  }
+</script>
+
+<script>
+  $('#inputSearch').quicksearch('table tbody tr');
+</script>
