--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -10,6 +10,10 @@
         </div>
       </div>
     </div>
+    <div class="form-group input-group">
+        <span class="input-group-addon searchbar-icon"><i class="material-icons">search</i></span>
+        <input name="consulta" id="inputSearch" placeholder="Consultar" type="text" class="form-control">
+    </div>
     <table class="table table-striped table-hover">
       <thead>
         <tr>
@@ -146,3 +150,7 @@
       $('#editInstitutionModal').modal('toggle');
     }
   </script>
+
+<script>
+  $('#inputSearch').quicksearch('table tbody tr');
+</script>
