--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -10,15 +10,11 @@
         </div>
       </div>
     </div>
-    <div class="form-group input-group">
-        <span class="input-group-addon searchbar-icon"><i class="material-icons">search</i></span>
-        <input name="consulta" id="inputSearch" placeholder="Consultar" type="text" class="form-control">
-    </div>
-    <table class="table table-striped table-hover">
+    <table id="table" class="table table-striped table-hover">
       <thead>
         <tr>
           <th>#</th>
-          <th>Nome</th>
+          <th>Instituição</th>
           <th>Nota</th>
           <th>Ações</th>
         </tr>
@@ -43,18 +39,36 @@
         <% end %>
       </tbody>
     </table>
-    <div class="clearfix">
-      <div class="hint-text">Mostrando <b>5</b> de <b>25</b> resultados</div>
-      <ul class="pagination">
-        <li class="page-item disabled"><a href="#">Anterior</a></li>
-        <li class="page-item"><a href="#" class="page-link">1</a></li>
-        <li class="page-item"><a href="#" class="page-link">2</a></li>
-        <li class="page-item active"><a href="#" class="page-link">3</a></li>
-        <li class="page-item"><a href="#" class="page-link">4</a></li>
-        <li class="page-item"><a href="#" class="page-link">5</a></li>
-        <li class="page-item"><a href="#" class="page-link">Próximo</a></li>
-      </ul>
+
+    <hr>
+
+    <div class="filters">
+      <div class="filters-title">
+        <h5>Filtros de pesquisa</h5>
+      </div>
+      <div class="filters-form">
+        <div class="col-6" style="text-align: center;">
+          <div>
+            <span>Instituição:</span>
+            <br/>
+            <input id="institutionFilter" type="text">
+          </div>
+        </div>
+        <div class="col-6" style="text-align: center;">
+          <div>
+            <span>Nota Mínima:</span>
+            <br/>
+            <input id="minGradeFilter" type="text">
+          </div>
+          <div>
+            <span>Nota Máxima:</span>
+            <br/>
+            <input id="maxGradeFilter" type="text">
+          </div>
+        </div>
+      </div>
     </div>
+
   </div>
 </div>
 
@@ -68,7 +82,7 @@
         </div>
         <div class="modal-body">          
           <div class="form-group">
-            <label for="addInstitutionTitle">Nome</label>
+            <label for="addInstitutionTitle">Instituição</label>
             <input id="addInstitutionTitle" name="institution[title]" type="text" class="form-control" required>
           </div>
           <div class="form-group">
@@ -119,7 +133,7 @@
         </div>
         <div class="modal-body">          
           <div class="form-group">
-            <label for="editInstitutionTitle">Name</label>
+            <label for="editInstitutionTitle">Instituição</label>
             <input id="editInstitutionTitle" name="institution[title]" type="text" class="form-control" required>
           </div>
           <div class="form-group">
@@ -138,19 +152,44 @@
   </div>
 </div>  
 
-  <script>
-    function deleteInstitution(id) {
-      $("#delete-form").attr('action', '/institutions/' + id );
-      $('#deleteInstitutionModal').modal('toggle');
-    }
-    function editInstitution(id, title, grade) {
-      $("#edit-form").attr('action', '/institutions/' + id );
-      $("#editInstitutionTitle").val( title );
-      $("#editInstitutionGrade").val( grade );
-      $('#editInstitutionModal').modal('toggle');
-    }
-  </script>
-
 <script>
-  $('#inputSearch').quicksearch('table tbody tr');
+  function deleteInstitution(id) {
+    $("#delete-form").attr('action', '/institutions/' + id );
+    $('#deleteInstitutionModal').modal('toggle');
+  }
+  function editInstitution(id, title, grade) {
+    $("#edit-form").attr('action', '/institutions/' + id );
+    $("#editInstitutionTitle").val( title );
+    $("#editInstitutionGrade").val( grade );
+    $('#editInstitutionModal').modal('toggle');
+  }
+
+  $.fn.dataTable.ext.search.push(
+      function( settings, data, dataIndex ) {
+          var minGradeFilter =  parseFloat( $('#minGradeFilter').val() );
+          var maxGradeFilter =  parseFloat( $('#maxGradeFilter').val() );
+          var institutionFilter =  parseInt( $('#institutionFilter').val() );
+          var institution = parseInt( data[1] ) || 0;
+          var grade = parseFloat( data[2] ) || 0;
+   
+          if ( ( isNaN( minGradeFilter ) && isNaN( maxGradeFilter ) ) ||
+               ( isNaN( minGradeFilter ) && grade <= maxGradeFilter ) ||
+               ( minGradeFilter <= grade   && isNaN( maxGradeFilter ) ) ||
+               ( minGradeFilter <= grade   && grade <= maxGradeFilter ) )
+          {
+            if ( institutionFilter == institution || isNaN(institutionFilter) ) {
+              return true;
+            }
+          }
+          return false;
+      }
+  );
+   
+  $(document).ready(function() {
+      var table = $('#table').DataTable();
+      $('#minGradeFilter, #maxGradeFilter, #institutionFilter').keyup( function() {
+          table.draw();
+      } );
+  } );
+
 </script>
