--- a/app/assets/stylesheets/components/table.scss
+++ b/app/assets/stylesheets/components/table.scss
@@ -3,7 +3,6 @@ body {
 		background: #f5f5f5;
 		font-family: 'Varela Round', sans-serif;
 		font-size: 13px;
-	}
 	.table-wrapper {
         background: #fff;
         padding: 20px 25px;
@@ -176,3 +175,11 @@ body {
 	.modal {
 		top: 80px;
 	}
+
+	table.dataTable.no-footer {
+    	border-bottom: 0px;
+	}
+	.dataTables_wrapper {
+		margin-bottom: 20px;
+	}
+}
