--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="py-2 drawer-heading">
-    Cadastro
+    Performance
   </div>
 
   <ul class="drawer-menu" id="mainMenu" data-children=".drawer-submenu">
@@ -34,26 +34,19 @@
   </ul>
 
   <div class="py-2 drawer-heading">
-    Performance
+    Admin
   </div>
 
   <ul class="drawer-menu" id="mainMenu" data-children=".drawer-submenu">
     <li class="drawer-menu-item">
-      <a href="/institutions">
-        <i class="material-icons">account_balance</i>
-        <span class="drawer-menu-text">Instituições</span>
+      <a href="/login">
+        <i class="material-icons">lock_open</i>
+        <span class="drawer-menu-text">Login</span>
       </a>
-    </li>
     <li class="drawer-menu-item">
-      <a href="/courses">
-        <i class="material-icons">language</i>
-        <span class="drawer-menu-text">Cursos</span>
-      </a>
-    </li>
-    <li class="drawer-menu-item">
-      <a href="/students">
-        <i class="material-icons">face</i>
-        <span class="drawer-menu-text">Alunos</span>
+      <a data-confirm="Are you sure?" href="/logout">
+        <i class="material-icons">lock</i>
+        <span class="drawer-menu-text">Logout</span>
       </a>
     </li>
   </ul>
