--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,9 +5,11 @@
         <div class="col-sm-6">
           <h2><b>Cursos</b></h2>
         </div>
+        <% if can? :create, Course %>
         <div class="col-sm-6 group-btn-title">
           <a href="#addCourseModal" class="btn btn-success btn-title" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Criar</span></a>
         </div>
+        <% end %>
       </div>
     </div>
     <table id="table" class="table table-striped table-hover">
@@ -39,9 +41,7 @@
         <% end %>
       </tbody>
     </table>
-
     <hr>
-
     <div class="filters">
       <div class="filters-title">
         <h5>Filtros de pesquisa</h5>
@@ -73,31 +73,29 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
-
 <div id="addCourseModal" class="modal fade">
   <div class="modal-dialog">
     <div class="modal-content">
       <form action="/courses" method="post">
-        <div class="modal-header">            
+        <div class="modal-header">
           <h4 class="modal-title">Adicionar Curso</h4>
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
-        <div class="modal-body">          
+        <div class="modal-body">
           <div class="form-group">
             <label for="addCourseTitle">Curso</label>
             <input id="addCourseTitle" name="course[title]" type="text" class="form-control" required>
-          </div>     
+          </div>
           <div class="form-group">
             <label for="addCourseInstitutionId">Instituição</label>
             <input id="addCourseInstitutionId" name="course[institution_id]" type="text" class="form-control" required>
-          </div>  
+          </div>
           <div class="form-group">
             <label for="addCourseGrade">Nota</label>
             <input id="addCourseGrade" name="course[grade]" type="text" class="form-control" required>
-          </div>       
+          </div>
         </div>
         <div class="modal-footer">
           <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
@@ -108,16 +106,15 @@
     </div>
   </div>
 </div>
-
 <div id="deleteCourseModal" class="modal fade">
   <div class="modal-dialog">
     <div class="modal-content">
       <form id="delete-form" action="" method="post">
-        <div class="modal-header">            
+        <div class="modal-header">
           <h4 class="modal-title">Deletar Curso</h4>
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
-        <div class="modal-body">          
+        <div class="modal-body">
           <p>Você tem certeza que deseja deletar?</p>
           <p class="text-warning"><small>Essa ação não pode ser desfeita.</small></p>
         </div>
@@ -131,20 +128,19 @@
     </div>
   </div>
 </div>
-
 <div id="editCourseModal" class="modal fade">
   <div class="modal-dialog">
     <div class="modal-content">
       <form id="edit-form" action="" method="post">
-        <div class="modal-header">            
+        <div class="modal-header">
           <h4 class="modal-title">Editar Curso</h4>
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
-        <div class="modal-body">          
+        <div class="modal-body">
           <div class="form-group">
             <label for="editCourseTitle">Curso</label>
             <input id="editCourseTitle" name="course[title]" type="text" class="form-control" required>
-          </div> 
+          </div>
           <div class="form-group">
             <label for="editCourseInstitutionId">Instituição</label>
             <input id="editCourseInstitutionId" name="course[institution_id]" type="text" class="form-control" required>
@@ -163,8 +159,7 @@
       </form>
     </div>
   </div>
-</div>  
-
+</div>
 <script>
   function deleteCourse(id) {
     $("#delete-form").attr('action', '/courses/' + id );
@@ -177,7 +172,7 @@
     $("#editCourseGrade").val( grade );
     $('#editCourseModal').modal('toggle');
   }
-
+  
   $.fn.dataTable.ext.search.push(
       function( settings, data, dataIndex ) {
           var minGradeFilter =  parseFloat( $('#minGradeFilter').val() );
@@ -209,5 +204,5 @@
           table.draw();
       } );
   } );
-
+  
 </script>
